<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue"
    android:gravity="center"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/return_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:srcCompat="@drawable/img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="Informe telefone ou e-mail"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_bg"
        android:hint="Senha"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="Continuar"
        android:textColor="@color/white" />

    <LinearLayout
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/button_style_google"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/google_logo"
            android:contentDescription="@string/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Continuar com o Google"
            android:textColor="@color/primaryBlue"
            android:textStyle="bold"/>
    </LinearLayout>



        <LinearLayout
            android:id="@+id/btn_search"
            android:layout_width="209dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/button_style_search"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/search"
                android:contentDescription="@string/google_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Encontrar minha conta"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>

    <TextView
        android:id="@+id/text_info_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sms"
        android:textAlignment="center"
        android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>
