<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBlue"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/return_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Qual é o seu número de telefone ou e-mail?"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:hint="Informe telefone ou e-mail"
        android:padding="12dp" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_bg"
        android:hint="Senha"
        android:inputType="textPassword"
        android:padding="12dp" />

        <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_style"
        android:text="Continuar"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="13dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OU"
            android:textColor="@color/white"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/button_style_google"
        android:padding="12dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/google_logo"
            android:contentDescription="@string/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Continuar com o Google"
            android:textColor="@color/primaryBlue"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_search"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/button_style_search"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/search"
            android:contentDescription="@string/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Encontrar minha conta"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_info_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="12dp"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="175dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/img" />

    </LinearLayout>
</LinearLayout>